[gd_scene load_steps=10 format=3 uid="uid://bqorcj3t6aicu"]

[ext_resource type="Script" uid="uid://dkdrp5ve8ykaj" path="res://scripts/main_scene.gd" id="1_pw63i"]
[ext_resource type="PackedScene" uid="uid://oc43dhm5oywn" path="res://scenes/player.tscn" id="1_w2twt"]
[ext_resource type="PackedScene" uid="uid://bqc4t0xcs8xgc" path="res://scenes/mob.tscn" id="2_7ykc4"]
[ext_resource type="AudioStream" uid="uid://blk5doqplk2h7" path="res://assets/audio/Spongebob - Grass Skirt Chase.wav" id="3_18nlu"]
[ext_resource type="AudioStream" uid="uid://ca2snp4ofbh8e" path="res://assets/audio/Spongebob - Twelfth Street Rag.wav" id="4_c1pb6"]
[ext_resource type="PackedScene" uid="uid://r6kwmxcqcv0l" path="res://scenes/heads_up_display.tscn" id="4_pu3yx"]
[ext_resource type="Texture2D" uid="uid://bgmcesh4rbye8" path="res://assets/backgrounds/vecteezy_city-and-house-under-the-sea-background_24990990.jpg" id="5_gubc5"]
[ext_resource type="AudioStream" uid="uid://cfsvwte7krhey" path="res://assets/audio/gameover.wav" id="6_rt2n2"]

[sub_resource type="Curve2D" id="Curve2D_w2twt"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1152, 648, 0, 0, 0, 0, 0, 648, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="MainScene" type="Node"]
script = ExtResource("1_pw63i")
mob_scene = ExtResource("2_7ykc4")
music_tracks = Array[AudioStream]([ExtResource("3_18nlu"), ExtResource("4_c1pb6")])

[node name="Player" parent="." instance=ExtResource("1_w2twt")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(575, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_w2twt")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HeadsUpDisplay" parent="." instance=ExtResource("4_pu3yx")]

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
offset_top = -88.0
offset_right = 1920.0
offset_bottom = 1141.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_gubc5")

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_rt2n2")

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HeadsUpDisplay" to="." method="new_game"]
